kubernetes/apps/base/external-services/openbao-internal/external/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openbao-internal
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  ports:
    - name: http
      port: 8200
      protocol: TCP
      targetPort: 8200
      appProtocol: http
  clusterIP: None
